tests/snapshots/run_wpt_conformance__litert_elu_float32_4D_tensor_negative_options_alpha.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "elu.https.any.js",
    "elu float32 4D tensor negative options.alpha",
    "litert",
    "PASS",
)
