tests/snapshots/run_wpt_conformance__litert_elu_float32_5D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "elu.https.any.js",
    "elu float32 5D tensor default options",
    "litert",
    "PASS",
)
